Blender crashes when the ctrl+z (undo) #70965

Closed
opened 2019-10-20 15:03:15 +02:00 by Mykola U · 14 comments

System Information
Operating system: win10/ Version 10.0.17134 Build 17134
Graphics card: gtx1070Ti

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47

Short description of error
Blender crashes when the ctrl+z (undo).

Exact steps for others to reproduce the error
Open attached .blend file, select and move any objects. Press Ctrl+z (undo)
undo_crash.blend

**System Information** Operating system: win10/ Version 10.0.17134 Build 17134 Graphics card: gtx1070Ti **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47 **Short description of error** Blender crashes when the ctrl+z (undo). **Exact steps for others to reproduce the error** Open attached .blend file, select and move any objects. Press Ctrl+z (undo) [undo_crash.blend](https://archive.blender.org/developer/F7841327/undo_crash.blend)
Author

Added subscriber: @mykolaus

Added subscriber: @mykolaus

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

Can confirm, also crashes with recent builds of 2.81 and 2.82.

Can confirm, also crashes with recent builds of 2.81 and 2.82.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Looks like some screen/layout problem with a file originiating in 2.79?

BKE_workspace_layout_screen_get returns NULL on the Default.001 WorkSpaceLayout.
( not sure why this Default.001 layout is hanging around, maybe we should just early out if there is no screen for this?)

1   lib_link_workspace_layout_restore         readfile.c        7963 0x2d25f6a 
2   blo_lib_link_restore                      readfile.c        8202 0x2d26b20 
3   setup_app_data                            blendfile.c       232  0x405bb11 
4   setup_app_blend_file_data                 blendfile.c       389  0x405c071 
5   BKE_blendfile_read_from_memfile           blendfile.c       487  0x405c3c6 
6   BKE_memfile_undo_decode                   blender_undo.c    79   0x405b46b 
7   memfile_undosys_step_decode               memfile_undo.c    92   0x404b775 
8   undosys_step_decode                       undo_system.c     207  0x407a0b8 
9   BKE_undosys_step_undo_with_data_ex        undo_system.c     681  0x407ba62 
10  BKE_undosys_step_undo_with_data           undo_system.c     717  0x407bbf7 
11  BKE_undosys_step_undo                     undo_system.c     722  0x407bc24 
12  ed_undo_step_impl                         ed_undo.c         190  0x4049fc3 
13  ed_undo_step_direction                    ed_undo.c         253  0x404a2a3 
14  ed_undo_exec                              ed_undo.c         389  0x404a757   
Looks like some screen/layout problem with a file originiating in 2.79? `BKE_workspace_layout_screen_get` returns NULL on the `Default.001` WorkSpaceLayout. ( not sure why this Default.001 layout is hanging around, maybe we should just early out if there is no screen for this?) ``` 1 lib_link_workspace_layout_restore readfile.c 7963 0x2d25f6a 2 blo_lib_link_restore readfile.c 8202 0x2d26b20 3 setup_app_data blendfile.c 232 0x405bb11 4 setup_app_blend_file_data blendfile.c 389 0x405c071 5 BKE_blendfile_read_from_memfile blendfile.c 487 0x405c3c6 6 BKE_memfile_undo_decode blender_undo.c 79 0x405b46b 7 memfile_undosys_step_decode memfile_undo.c 92 0x404b775 8 undosys_step_decode undo_system.c 207 0x407a0b8 9 BKE_undosys_step_undo_with_data_ex undo_system.c 681 0x407ba62 10 BKE_undosys_step_undo_with_data undo_system.c 717 0x407bbf7 11 BKE_undosys_step_undo undo_system.c 722 0x407bc24 12 ed_undo_step_impl ed_undo.c 190 0x4049fc3 13 ed_undo_step_direction ed_undo.c 253 0x404a2a3 14 ed_undo_exec ed_undo.c 389 0x404a757 ```

Added subscriber: @dfelinto

Added subscriber: @dfelinto

More likely a file originated from an non-stable version of 2.80?
@mykolaus which Blender versions did you save your file on?

More likely a file originated from an non-stable version of 2.80? @mykolaus which Blender versions did you save your file on?
Author

It was released/stable version of Blender 2.8 (Win 64 bit Installer)

version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449, type:
build date: 2019-07-29, 09:44 AM
platform: Windows.

It was released/stable version of Blender 2.8 (Win 64 bit Installer) version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f54494e, type: build date: 2019-07-29, 09:44 AM platform: Windows.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

Is this still an issue with latest build? https://builder.blender.org/download/

Is this still an issue with latest build? https://builder.blender.org/download/
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

This issue was referenced by ca49643f3c

This issue was referenced by ca49643f3c254a0bdb75f9972880c62bf7f44c3e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-01-15 17:49:15 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70965
No description provided.